fix: remove object name credor
